---
title: KRAAK – Relations & cardinalités (vue simplifiée)
---
erDiagram

    %% Vue allégée : uniquement les entités et leurs liens,
    %% sans le détail des colonnes.

    AUTH_USERS ||--||  APP_USER            : "id ← id"

    APP_USER   ||--o|  PARTICIPANT         : "id ← user_id (UNIQUE)"
    APP_USER   ||--o{  SESSION             : "id ← trainer_user_id"
    APP_USER   ||--o{  ANNOUNCEMENT        : "id ← created_by_user_id"
    APP_USER   ||--o{  NOTIFICATION        : "id ← user_id"
    APP_USER   ||--o{  SUPPORT_REQUEST     : "id ← user_id"
    APP_USER   ||--o{  SUPPORT_REQUEST     : "id ← assigned_to_user_id"

    PARTICIPANT ||--o{ ENROLLMENT          : "id ← participant_id"
    PARTICIPANT ||--o{ SUPPORT_REQUEST     : "id ← participant_id"

    PROGRAM    ||--o{  COHORT              : "id ← program_id"
    PROGRAM    ||--o{  ENROLLMENT          : "id ← program_id"
    PROGRAM    ||--o{  RESOURCE            : "id ← program_id"
    PROGRAM    ||--o{  ANNOUNCEMENT        : "id ← program_id"

    COHORT     ||--o{  SESSION             : "id ← cohort_id"
    COHORT     ||--o{  ENROLLMENT          : "id ← cohort_id"
    COHORT     ||--o{  RESOURCE            : "id ← cohort_id"
    COHORT     ||--o{  ANNOUNCEMENT        : "id ← cohort_id"
